plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.careertuner'
version = '0.0.1-SNAPSHOT'
description = 'CareerTuner'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Persistence: MyBatis only (JPA intentionally excluded — see 기획 가이드).
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.0.1'
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Web / API
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'
    implementation 'org.apache.pdfbox:pdfbox:3.0.7'
    implementation 'org.jsoup:jsoup:1.22.2'

    // Email (verification / password reset via SMTP)
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Web Push (VAPID) — 브라우저/PWA 푸시 발송. BouncyCastle 은 암호화 provider 로 명시 추가.
    implementation 'nl.martijndwars:web-push:5.1.2'
    implementation 'org.bitbucket.b_c:jose4j:0.9.6'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'

    // 네이티브 푸시(FCM/APNs via Firebase). 서비스계정 미설정 시 빈 미생성 → 로깅 폴백(무해).
    implementation 'com.google.firebase:firebase-admin:9.9.0'

    // JWT (access / refresh tokens)
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // LangChain4j (Spring Boot 4 전용 스타터) — Part 2 tool-calling 게이트 측정용.
    // 주의: 이 프로젝트는 Spring Boot 4 → 반드시 -spring-boot4-starter 사용 (Boot 3용 -spring-boot-starter 아님).
    // langchain4j-bom 은 spring 스타터 버전을 관리하지 않으므로(별도 버전체계) 버전을 직접 명시한다.
    implementation 'dev.langchain4j:langchain4j-spring-boot4-starter:1.17.0-beta27'        // @AiService 스캐닝
    implementation 'dev.langchain4j:langchain4j-ollama-spring-boot4-starter:1.17.0-beta27' // OllamaChatModel 오토컨피그
    // 챗봇 LLM 폴백 provider (Ollama 다운 시 Haiku→OpenAI). 스타터가 아닌 순수 라이브러리 모듈이라
    // 버전은 core/ollama 와 동일한 1.17.0(정식). 빈은 ChatModelFallbackConfig 에서 직접 .builder() 로 만든다
    // (스타터를 쓰면 자동구성 ChatModel 빈이 중복 등록돼 @Primary 해소가 복잡해짐).
    implementation 'dev.langchain4j:langchain4j-anthropic:1.17.0'
    implementation 'dev.langchain4j:langchain4j-open-ai:1.17.0'

    // Dev tooling
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-jdbc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:4.0.1'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
    useJUnitPlatform()
}
